Fixed Tag Alignment

--- a/src/main.css
+++ b/src/main.css
@@ -451,9 +451,7 @@ body {
           align-items: center;
   -ms-flex-align: center;
   flex-wrap: wrap;
-  -webkit-justify-content: flex-start;
-      -ms-justify-content: flex-start;
-          justify-content: flex-start;
+  justify-content: center;
 }
 
 .project-tags > p {
